Complete Square Class