@@ -1,14 +1,21 @@
 import java.util.Locale;
 
-public class Triangle extends Figure implements Printable
-{
+public class Triangle extends Figure implements Printable {
     double a, b, c;
+
     //constructor
     public Triangle(double a, double b, double c) {
         this.a = a;
         this.b = b;
         this.c = c;
     }
+
+    @Override
+    public String toString()
+    {
+        return "Boki trójkąta to: %.2f , %.2f , %.2f".formatted(a, b, c);
+    }
+
     //P=p(p−a)(p−b)(p−c)−−−−−−−−−−−−−−−−−√
     @Override
     double calculateAREA() {
@@ -23,8 +30,8 @@ public class Triangle extends Figure implements Printable
 
     @Override
     public void print() {
-        System.out.println(String.format(Locale.US,%.2f %.2f %.2f, a, b, c));
-        System.out.println(this.calculateAREA());
-        System.out.println(this.calculatePerimeter());
+        System.out.println(this);
+        System.out.println("Pole: %.2f".formatted(this.calculateAREA()));
+        System.out.println("Obwód: %.2f".formatted(this.calculatePerimeter()));
     }
 }
